--- a/hotels.html
+++ b/hotels.html
@@ -25,7 +25,9 @@
         <a class="logo__sedona" href="index.html">
         <img src="images/sedona.svg" class="logo" alt="Логотип Седона">
       </a>
-        <ul class="navigation-list navigation-user" >
+
+      <!-- navigation__user -->
+        <ul class="navigation-user" >
           <li class="navigation__item-user">
             <a class="navigation__link-user" href="#">
               <svg class="navigation__icon" aria-hidden="true" focusable="false" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -44,8 +46,46 @@
 
               <span class="visually-hidden">Избранное</span>
             </a>
+            <!-- ПОПОВЕР -->
+            <div class="popover popover__favorite">
+              <div class="popover__content">
+                <h2 class="popover__title visually-hidden">Избранное</h2>
+                <ul class="popover__favorite-list">
+                  <li class="popover__favorite-item">
+                    <a class="popover__favorite-link">
+                      <img class="popover__favorite-img" src="images/content/hotel-2-small.jpg" alt="">
+                      <p class="popover__favorite-title">Desert Quail Inn</p>
+                      <p class="popover__favorite-decription">Мотель</p>
+                    </a>
+                    <svg class="icon__del" aria-hidden="true" focusable="false" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M15.3 2.3H13.1H2.8H0.6C0.3 2.3 0 2.5 0 2.8C0 3.1 0.3 3.4 0.6 3.4H2.3V15.4C2.3 15.7 2.6 16 2.9 16H13.1C13.4 16 13.7 15.7 13.7 15.4V3.4H15.4C15.7 3.4 16 3.1 16 2.8C16 2.5 15.6 2.3 15.3 2.3ZM12.5 14.8H3.4V3.4H12.5V14.8Z"/>
+                      <path d="M6.19995 1.2H9.59995C9.89995 1.2 10.2 0.9 10.2 0.6C10.2 0.3 9.99995 0 9.69995 0H6.19995C5.89995 0 5.69995 0.3 5.69995 0.6C5.69995 0.9 5.89995 1.2 6.19995 1.2Z"/>
+                      <path d="M6.2001 12C6.5001 12 6.8001 11.7 6.8001 11.4V5.70001C6.8001 5.40001 6.5001 5.10001 6.2001 5.10001C5.9001 5.10001 5.6001 5.40001 5.6001 5.70001V11.4C5.7001 11.7 5.9001 12 6.2001 12Z"/>
+                      <path d="M9.7001 12C10.0001 12 10.3001 11.7 10.3001 11.4V5.70001C10.3001 5.40001 10.0001 5.10001 9.7001 5.10001C9.4001 5.10001 9.1001 5.50001 9.1001 5.70001V11.4C9.1001 11.7 9.3001 12 9.7001 12Z"/>
+                      </svg>
+
+                  </li>
+                  <li class="popover__favorite-item">
+                    <a class="popover__favorite-link">
+                    <img class="popover__favorite-img" src="images/content/hotel-3-small.jpg" alt="">
+                    <p class="popover__favorite-title">Villas at Poco Diablo</p>
+                    <p class="popover__favorite-decription">Апартаменты</p>
+                    </a>
+
+                    <svg class="icon__del" aria-hidden="true" focusable="false" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M15.3 2.3H13.1H2.8H0.6C0.3 2.3 0 2.5 0 2.8C0 3.1 0.3 3.4 0.6 3.4H2.3V15.4C2.3 15.7 2.6 16 2.9 16H13.1C13.4 16 13.7 15.7 13.7 15.4V3.4H15.4C15.7 3.4 16 3.1 16 2.8C16 2.5 15.6 2.3 15.3 2.3ZM12.5 14.8H3.4V3.4H12.5V14.8Z"/>
+                      <path d="M6.19995 1.2H9.59995C9.89995 1.2 10.2 0.9 10.2 0.6C10.2 0.3 9.99995 0 9.69995 0H6.19995C5.89995 0 5.69995 0.3 5.69995 0.6C5.69995 0.9 5.89995 1.2 6.19995 1.2Z"/>
+                      <path d="M6.2001 12C6.5001 12 6.8001 11.7 6.8001 11.4V5.70001C6.8001 5.40001 6.5001 5.10001 6.2001 5.10001C5.9001 5.10001 5.6001 5.40001 5.6001 5.70001V11.4C5.7001 11.7 5.9001 12 6.2001 12Z"/>
+                      <path d="M9.7001 12C10.0001 12 10.3001 11.7 10.3001 11.4V5.70001C10.3001 5.40001 10.0001 5.10001 9.7001 5.10001C9.4001 5.10001 9.1001 5.50001 9.1001 5.70001V11.4C9.1001 11.7 9.3001 12 9.7001 12Z"/>
+                      </svg>
+                  </li>
+                </ul>
+                <a class="popover__favorite-button" href="#">все избранные</a>
+              </div>
+
+            </div>
           </li>
-          <li class="navigation__item-user">
+          <li class="navigation__item-button">
             <a class="navigation__link-button button" href="#">Хочу сюда</a>
           </li>
         </ul>
@@ -299,7 +339,7 @@
         </ul>
 
 
-        <button class="botton__show-more button__blue">Загрузить еще</button>
+        <button class="botton__show-more button__blue" type="button">Загрузить еще</button>
       </div>
 
         <!-- переключение страниц -->
