--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   </div>
   <div class="modal__container">
     <div class="modal modal__search">
-      <button class="modal__close-button">
+      <button class="modal__close-button" type="button">
         <span class="visually-hidden">Закрыть</span>
       </button>
       <section class="modal__content">
@@ -268,23 +268,39 @@
           <p class="modal__description">На эти даты есть свободные номера. Пока есть.</p>
             <span class="adults">Взрослые:</span>
             <div class="modal__search-adults">
-              <button class="modal__button-minus"></button>
+              <button class="modal__button-minus" type="button">
+                <svg class="minus__icon" aria-hidden="true" focusable="false" width="13" height="1" viewBox="0 0 13 1" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0 0L0 1L13 1V0L0 0Z"/>
+                </svg>
+              </button>
               <span class="adults__number">2</span>
-              <button class="modal__button-plus"></button>
+              <button class="modal__button-plus" type="button">
+                <svg class="plus__icon" aria-hidden="true" focusable="false" width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M13 6H7V0H6V6H0V7H6V13H7V7H13V6Z" fill="black"/>
+                </svg>
+              </button>
             </div>
           <span class="child">Дети:</span>
           <div class="child__description-info">
-            <button class="button__child-info">i</button>
+            <button class="button__child-info" type="button">i</button>
             <div class="child__description-conteiner">
               <p class="child__description">Укажите количество детей,<br> которые будут с вами, возраст которых от 6 до 18 лет. Дети <br>до 6 лет размещаются<br> бесплатно.</p>
             </div>
           </div>
           <div class="modal__search-child">
-            <button class="modal__button-minus"></button>
+            <button class="modal__button-minus" type="button">
+              <svg class="minus__icon" aria-hidden="true" focusable="false" width="13" height="1" viewBox="0 0 13 1" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 0L0 1L13 1V0L0 0Z"/>
+              </svg>
+            </button>
             <span class="child__number">1</span>
-            <button class="modal__button-plus"></button>
+            <button class="modal__button-plus" type="button">
+              <svg class="plus__icon" aria-hidden="true" focusable="false" width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M13 6H7V0H6V6H0V7H6V13H7V7H13V6Z"/>
+              </svg>
+            </button>
           </div>
-          <input type="submit" value="Найти" class="modal__button">
+          <input type="submit" value="Найти" class="modal__button button__blue">
         </form>
       </section>
     </div>
