--- a/hotels.html
+++ b/hotels.html
@@ -22,17 +22,14 @@
             <a class="navigation__link navigation__link-hotels" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
-        <a class="logo__sedona" href="index.html">
-        <img src="images/sedona.svg" class="logo" alt="Логотип Седона">
-      </a>
-
+        <a class="logo__sedona" href="index.html"><img src="images/sedona.svg" class="logo" alt="Логотип Седона"></a>
       <!-- navigation__user -->
         <ul class="navigation-user" >
           <li class="navigation__item-user">
             <a class="navigation__link-user" href="#">
               <svg class="navigation__icon" aria-hidden="true" focusable="false" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M18 16.5L14.3 12.8C15.3 11.5 16 9.8 16 7.9C16 3.5 12.4 -0.1 8 -0.1C3.6 -0.1 0 3.6 0 8C0 12.4 3.6 16 8 16C9.8 16 11.5 15.4 12.9 14.3L16.6 18L18 16.5ZM8 14C4.7 14 2 11.3 2 8C2 4.7 4.7 2 8 2C11.3 2 14 4.7 14 8C14 11.3 11.3 14 8 14Z"/>
-                </svg>
+              </svg>
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
@@ -43,7 +40,6 @@
                 <path d="M31 9.5C31 14.7467 26.7467 19 21.5 19C16.2533 19 12 14.7467 12 9.5C12 4.25329 16.2533 0 21.5 0C26.7467 0 31 4.25329 31 9.5Z" fill="#7DB54F"/>
                 <path d="M17.6308 12.26H19.0308V7.42L19.1308 6.83L18.7308 7.3L17.6308 8.09L17.2508 7.58L19.4508 5.88H19.8108V12.26H21.1808V13H17.6308V12.26ZM25.46 7.59C25.46 7.94333 25.3933 8.30667 25.26 8.68C25.1333 9.04667 24.9633 9.41667 24.75 9.79C24.5433 10.1633 24.31 10.53 24.05 10.89C23.79 11.2433 23.53 11.58 23.27 11.9L22.78 12.33V12.37L23.42 12.26H25.6V13H21.62V12.71C21.7667 12.5567 21.9433 12.3667 22.15 12.14C22.3567 11.9133 22.57 11.6633 22.79 11.39C23.0167 11.11 23.2367 10.8167 23.45 10.51C23.67 10.1967 23.8667 9.88 24.04 9.56C24.22 9.24 24.3633 8.92333 24.47 8.61C24.5767 8.29667 24.63 8 24.63 7.72C24.63 7.39333 24.5367 7.12333 24.35 6.91C24.1633 6.69 23.88 6.58 23.5 6.58C23.2467 6.58 23 6.63333 22.76 6.74C22.52 6.84 22.3133 6.95667 22.14 7.09L21.81 6.52C22.0433 6.32 22.32 6.16333 22.64 6.05C22.96 5.93667 23.3033 5.88 23.67 5.88C23.9567 5.88 24.21 5.92333 24.43 6.01C24.65 6.09 24.8367 6.20667 24.99 6.36C25.1433 6.51333 25.26 6.69667 25.34 6.91C25.42 7.11667 25.46 7.34333 25.46 7.59Z" fill="white"/>
               </svg>
-
               <span class="visually-hidden">Избранное</span>
             </a>
             <!-- ПОПОВЕР -->
@@ -57,32 +53,19 @@
                       <p class="popover__favorite-title">Desert Quail Inn</p>
                       <p class="popover__favorite-decription">Мотель</p>
                     </a>
-                    <svg class="icon__del" aria-hidden="true" focusable="false" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M15.3 2.3H13.1H2.8H0.6C0.3 2.3 0 2.5 0 2.8C0 3.1 0.3 3.4 0.6 3.4H2.3V15.4C2.3 15.7 2.6 16 2.9 16H13.1C13.4 16 13.7 15.7 13.7 15.4V3.4H15.4C15.7 3.4 16 3.1 16 2.8C16 2.5 15.6 2.3 15.3 2.3ZM12.5 14.8H3.4V3.4H12.5V14.8Z"/>
-                      <path d="M6.19995 1.2H9.59995C9.89995 1.2 10.2 0.9 10.2 0.6C10.2 0.3 9.99995 0 9.69995 0H6.19995C5.89995 0 5.69995 0.3 5.69995 0.6C5.69995 0.9 5.89995 1.2 6.19995 1.2Z"/>
-                      <path d="M6.2001 12C6.5001 12 6.8001 11.7 6.8001 11.4V5.70001C6.8001 5.40001 6.5001 5.10001 6.2001 5.10001C5.9001 5.10001 5.6001 5.40001 5.6001 5.70001V11.4C5.7001 11.7 5.9001 12 6.2001 12Z"/>
-                      <path d="M9.7001 12C10.0001 12 10.3001 11.7 10.3001 11.4V5.70001C10.3001 5.40001 10.0001 5.10001 9.7001 5.10001C9.4001 5.10001 9.1001 5.50001 9.1001 5.70001V11.4C9.1001 11.7 9.3001 12 9.7001 12Z"/>
-                      </svg>
-
+                    <button class="button__del" type="button"></button>
                   </li>
                   <li class="popover__favorite-item">
                     <a class="popover__favorite-link">
-                    <img class="popover__favorite-img" src="images/content/hotel-3-small.jpg" alt="">
-                    <p class="popover__favorite-title">Villas at Poco Diablo</p>
-                    <p class="popover__favorite-decription">Апартаменты</p>
+                      <img class="popover__favorite-img" src="images/content/hotel-3-small.jpg" alt="">
+                      <p class="popover__favorite-title">Villas at Poco Diablo</p>
+                      <p class="popover__favorite-decription">Апартаменты</p>
                     </a>
-
-                    <svg class="icon__del" aria-hidden="true" focusable="false" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M15.3 2.3H13.1H2.8H0.6C0.3 2.3 0 2.5 0 2.8C0 3.1 0.3 3.4 0.6 3.4H2.3V15.4C2.3 15.7 2.6 16 2.9 16H13.1C13.4 16 13.7 15.7 13.7 15.4V3.4H15.4C15.7 3.4 16 3.1 16 2.8C16 2.5 15.6 2.3 15.3 2.3ZM12.5 14.8H3.4V3.4H12.5V14.8Z"/>
-                      <path d="M6.19995 1.2H9.59995C9.89995 1.2 10.2 0.9 10.2 0.6C10.2 0.3 9.99995 0 9.69995 0H6.19995C5.89995 0 5.69995 0.3 5.69995 0.6C5.69995 0.9 5.89995 1.2 6.19995 1.2Z"/>
-                      <path d="M6.2001 12C6.5001 12 6.8001 11.7 6.8001 11.4V5.70001C6.8001 5.40001 6.5001 5.10001 6.2001 5.10001C5.9001 5.10001 5.6001 5.40001 5.6001 5.70001V11.4C5.7001 11.7 5.9001 12 6.2001 12Z"/>
-                      <path d="M9.7001 12C10.0001 12 10.3001 11.7 10.3001 11.4V5.70001C10.3001 5.40001 10.0001 5.10001 9.7001 5.10001C9.4001 5.10001 9.1001 5.50001 9.1001 5.70001V11.4C9.1001 11.7 9.3001 12 9.7001 12Z"/>
-                      </svg>
+                    <button class="button__del" type="button"></button>
                   </li>
                 </ul>
-                <a class="popover__favorite-button" href="#">все избранные</a>
+                <a class="popover__favorite-button button" href="#">все избранные</a>
               </div>
-
             </div>
           </li>
           <li class="navigation__item-button">
@@ -90,49 +73,48 @@
           </li>
         </ul>
       </nav>
-    </div>
+      </div>
     </header>
 <!-- Хлебные крошки -->
     <main class="main__hotels">
       <div class="main__container">
-      <div class="hotels__background">
-      <header class="hotels__header">
-        <h1 class="hotels__header-title">Гостиницы Седоны</h1>
-        <ul class="breadcrumbs">
-          <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link-home" href="index.html">
-            <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M6 0.300049L0 5.80005V12H12V5.80005L6 0.300049ZM11 11H1V6.20005L6 1.70005L11 6.20005V11Z" fill="white"/><path d="M4 10H5V7.5H7V10H8V6.5H4V10Z" fill="white"/>
-            </svg>
-          </a>
-          </li>
-          <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="hotels.html">Гостиницы</a>
-          </li>
-        </ul>
+        <div class="hotels__background">
+        <header class="hotels__header">
+          <h1 class="hotels__header-title">Гостиницы Седоны</h1>
+          <ul class="breadcrumbs">
+            <li class="breadcrumbs__item">
+             <a class="breadcrumbs__link-home" href="index.html">
+             <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M6 0.300049L0 5.80005V12H12V5.80005L6 0.300049ZM11 11H1V6.20005L6 1.70005L11 6.20005V11Z" fill="white"/><path d="M4 10H5V7.5H7V10H8V6.5H4V10Z" fill="white"/>
+             </svg>
+             </a>
+            </li>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="hotels.html">Гостиницы</a>
+           </li>
+          </ul>
       </header>
 <!-- фильтры для поиска гостиницы -->
       <section class="hotels__search">
         <h2 class="visually-hidden" hidden>Фильтры для поиска гостиницы</h2>
         <form class="hotels__form" action="https://echo.htmlacademy.ru/" method="get">
-
-          <fieldset class="hotels__form-fieldset">
+         <fieldset class="hotels__form-fieldset">
             <legend class="hotels__form-infrastructure">Инфраструктура:</legend>
-            <ul class="hotels__infrastructure-list">
-              <li class="hotels__infrastructure-item">
-                <label class="control">
-                  <input class="visually-hidden control__input" type="checkbox" name="pool" checked>
-                  <span class="control__mark"></span>
-                  <span class="control__label">Бассейн</span>
-                </label>
-              </li>
-              <li class="hotels__infrastructure-item">
-                <label class="control">
-                  <input class="visually-hidden control__input" type="checkbox" name="parking" checked>
-                  <span class="control__mark"></span>
-                  <span class="control__label">Парковка</span>
-                </label>
-              </li>
+              <ul class="hotels__infrastructure-list">
+               <li class="hotels__infrastructure-item">
+                  <label class="control">
+                   <input class="visually-hidden control__input" type="checkbox" name="pool" checked>
+                    <span class="control__mark"></span>
+                    <span class="control__label">Бассейн</span>
+                  </label>
+                </li>
+               <li class="hotels__infrastructure-item">
+                  <label class="control">
+                   <input class="visually-hidden control__input" type="checkbox" name="parking" checked>
+                   <span class="control__mark"></span>
+                   <span class="control__label">Парковка</span>
+                  </label>
+               </li>
               <li class="hotels__infrastructure-item">
                 <label class="control">
                   <input class="visually-hidden control__input" type="checkbox" name="Wi-Fi">
@@ -142,71 +124,64 @@
               </li>
             </ul>
           </fieldset>
-
           <fieldset class="hotels__filter-group">
             <legend class="hotels__form-housing">Тип жилья:</legend>
-            <ul class="hotels__housing-list">
-              <li class="hotels__housing-item">
-                <label class="control">
+              <ul class="hotels__housing-list">
+               <li class="hotels__housing-item">
+                 <label class="control">
                   <input class="visually-hidden control__input" type="radio" name="type-hotels" value="hotel" checked>
                   <span class="control__mark"></span>
                   <span class="control__label">Гостинница</span>
-                </label>
+                  </label>
+                </li>  
                 <li class="hotels__housing-item">
                   <label class="control">
                     <input class="visually-hidden control__input" type="radio" name="type-hotels" value="motel">
                     <span class="control__mark"></span>
                     <span class="control__label">Мотель</span>
                   </label>
-              </li>
-              <li class="hotels__housing-item">
-                <label class="control">
-                  <input class="visually-hidden control__input" type="radio" name="type-hotels" value="apartments">
-                  <span class="control__mark"></span>
-                  <span class="control__label">Апартаменты</span>
-                </label>
-            </li>
-            </ul>
+                </li>
+                <li class="hotels__housing-item">
+                  <label class="control">
+                    <input class="visually-hidden control__input" type="radio" name="type-hotels" value="apartments">
+                    <span class="control__mark"></span>
+                    <span class="control__label">Апартаменты</span>
+                 </label>
+                </li>
+              </ul>
           </fieldset>
-
-
           <fieldset class="hotels__filter-price">
             <legend class="hotels__form-price">Стоимость, ₽:</legend>
-
-            <div class="range">
-
-              <div class="range__wrapper-inputs">
-                <label class="hotels__price-input">
-                  <input class="hotels__filter-input input__before" type="number" name="min-price" value="0">
-                  <span class="before">от</span>
-               </label>
-               <label class="hotels__price-input">
-                <input class="hotels__filter-input input__after" type="number" name="max-price" value="9000">
-                <span class="after">до</span>
-               </label>
+              <div class="range">
+                <div class="range__wrapper-inputs">
+                  <label class="hotels__price-input">
+                    <input class="hotels__filter-input input__before" type="number" name="min-price" value="0">
+                    <span class="before">от</span>
+                  </label>
+                  <label class="hotels__price-input">
+                    <input class="hotels__filter-input input__after" type="number" name="max-price" value="9000">
+                    <span class="after">до</span>
+                  </label>
+               </div>
              </div>
-
-
              <div class="range__scale">
-              <div class="range__bar" style="width: 287px"></div>
+                <div class="range__bar" style="width: 287px"></div>
                 <button class="range__toggle toggle__min" type="button">
                   <span class="visually-hidden">Изменить минимальную цену</span>
                 </button>
                 <button class="range__toggle toggle__max" type="button">
                   <span class="visually-hidden">Изменить максимальную цену</span>
-              </button>
+                </button>
               </div>
-            </div>
           </fieldset>
-
           <div class="hotels__buttoms">
-        <button class="button__apply" type="submit">Применить</button>
-        <button class="button__reset" type="reset">Сбросить</button>
-      </div>
+            <button class="button__apply" type="submit">Применить</button>
+            <button class="button__reset" type="reset">Сбросить</button>
+          </div>
         </form>
-      </div>
-
-        <div class="hotels__found-container">
+        </div>
+     </section>
+      <div class="hotels__found-container">
        <p class="hotels__found">Найдено гостиниц: 38</p>
         <form class="sorting__type">
           <label class="visually-hidden" for="sorting" hidden>Сортировка</label>
@@ -426,7 +401,7 @@
    </section>
   </div>
   </footer>
-</div>
+    </div>
 <div class="modal__container">
   <div class="modal modal__search">
     <button class="modal__close-button" type="button">
