Добавила фавиконку, выровняла фильтры для поиска гостиниц, удалила картинку с неверным именем, поправила селект по кросбраузерности

--- a/hotels.html
+++ b/hotels.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset="utf-8">
       <title>HTML Academy: Седона</title>
+      <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
       <link rel="stylesheet" href="styles/styles.css">
    </head>
    <body>
@@ -132,7 +133,7 @@
                                  <label class="control">
                                  <input class="visually-hidden control__input" type="radio" name="type-hotels" value="hotel" checked>
                                  <span class="control__mark"></span>
-                                 <span class="control__label">Гостинница</span>
+                                 <span class="control__label">Гостиница</span>
                                  </label>
                               </li>
                               <li class="hotels__housing-item">
@@ -187,7 +188,7 @@
                   <form class="sorting__type">
                      <label class="visually-hidden" for="sorting" hidden>Сортировка</label>
                      <select class="select__control" id="sorting" name="sorting">
-                        <option value="cheap">Сначала дешевые</option>
+                        <option value="cheap">Сначала дешёвые</option>
                         <option value="expensive">Сначала дорогие</option>
                         <option value="popular">Сначала популярные</option>
                      </select>
